styles: Fix tsmb-icon-close alignment when input has custom height
When customizing the input height, the close icon was no longer
vertically centered. Add a version of this to the demo, and fix
it by using the top: 50% minus half trick.

== Transfer size ==

Before:
> $ npm run size
> CSS 1816

After:
> CSS 1816 (±0 B)

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,11 +1,12 @@
 html {
+  margin: 0;
   background: #f4f4f4;
   color: #333;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Lato, Helvetica, Arial, sans-serif;
   line-height: 1.5;
 }
 
-html, body {
+body {
   margin: 0;
 }
 
@@ -23,7 +24,7 @@ a:focus {
 header,
 main,
 .demo-stylecontrol {
-  padding: 1rem calc((100% - 65rem) / 2) 0;
+  padding: 1rem calc((100% - 65rem) / 2) 0 1rem;
 }
 
 .demo-logo {
@@ -52,6 +53,12 @@ body {
 }
 main {
   flex-grow: 1;
+}
+
+.demo-custom-form {
+  --tsmb-size-input: 2rem;
+  --tsmb-size-radius: 0px;
+  width: 30rem;
 }
 
 .demo-stylecontrol fieldset {
